# Homework1

./: CMakeLists.txt  main.cpp  test_version.cpp
.github/workflows/: cmake-multi-platform.yml
